@@ -5,6 +5,7 @@ Revision history for perl distribution Convos
  - Fix tracking join/part/quit/nick change events #276
  - Normalizing email address for user
  - Add translation for :), :( and <3 into emojis
+ - Can select TLS on connect
 
 0.99_09 2016-09-11T22:53:31+0200
  - Fix sorting participants list
